[package]
name = "cfd-lib"
version = "0.1.0"
authors = ["Giorgio Bella<bgiorgio0506@gmail.com>"]
description = "main cfd lib for browser cfd sim"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
